# llm_uncensoring

./: README.md  pyproject.toml  requirements.txt
configs/: base.yaml  logit_intervention.yaml  patchscopes.yaml  rl_distillation.yaml
configs/models/: ministral.yaml  qwen3.yaml
scripts/: run_logit_intervention.py  run_patchscopes.py  run_rl_distillation.py
src/llm_uncensoring/: __init__.py
src/llm_uncensoring/data/: __init__.py  dataset.py
src/llm_uncensoring/experiments/logit_intervention/: __init__.py  processor.py  refusal_tokens.py
src/llm_uncensoring/experiments/patchscopes/: __init__.py  layer_probe.py  refusal_scorer.py
src/llm_uncensoring/experiments/rl_distillation/: __init__.py  judge.py  reflector.py  trainer.py
src/llm_uncensoring/models/: __init__.py  loader.py
src/llm_uncensoring/utils/: __init__.py  metrics.py  visualization.py
